# Crud_Mercado_Livre

./: README.md  docker-compose.yml  pyproject.toml
src/backend/: Dockerfile  crud.py  database.py  models.py  router.py  schema.py
src/frontend/: Dockerfile  app.py
