[project]
name = "desafio-final-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Figueiredo",email = "samuel.lobo2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic[email] (>=2.12.2,<3.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "desafio_final_python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
